# TG-MyPerson

./: .env.example  .gitignore  README.md  alembic.ini  get_session.py  openclaw-skill-telegram.md  pyproject.toml
alembic/versions/: 001_initial.py  002_multi_account.py  003_fix_indexes.py  004_drop_legacy_session.py  005_audit_partition_helpers.py  006_fix_drop_audit_partitions_regex.py  007_add_sender_chat_id.py  008_audit_default_partition.py
app/: config.py  init_db.py  main.py  models.py  schemas.py
app/api/: accounts.py  auth.py  chats.py  contacts.py  messages.py  router.py  search.py  snapshots.py  stream.py  sync.py  users.py
app/authz/: middleware.py  tool_catalog.py
app/scripts/: audit_partitions.py
app/services/: backfill_service.py  chat_service.py  message_service.py  partition_maintenance.py  registry_service.py  stream_service.py  user_service.py
app/telegram/: client.py  handlers.py  pool.py  session.py
app/utils/: sender.py
tests/: conftest.py  test_audit_partitions.py  test_authz_middleware.py  test_backfill_forward.py  test_broadcast_ingest.py  test_classify_sender.py  test_download_media_streaming.py  test_handlers_register.py  test_partition_maintenance.py  test_pool.py  test_registry_service.py  test_security_compare.py  test_sender_utils.py  test_snapshot_floodwait.py  test_snapshot_search_letters.py  test_users_resolve.py
