[project]
name = "tg-myperson"
version = "0.1.0"
description = "Telegram Personal Account Bridge: MTProto → PostgreSQL → REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "telethon>=1.37",
    "cryptg>=0.4",
    "pydantic-settings>=2.7",
    "psycopg2-binary>=2.9",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
